started working on breakdowns, added modal spinner to timesheets list and fixed layout issues

--- a/src/components/accounting/ng/scss/accounting.scss
+++ b/src/components/accounting/ng/scss/accounting.scss
@@ -1,3 +1,9 @@
+.pull-left{
+    .modal-spinner{
+        vertical-align:middle;
+        margin-left:30px!important;
+    }
+}
 .pull-right{
     .form-control{
         display:inline!important;
